[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbfuncs"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Murilo Cunha", email = "murilo@dataroots.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/nbfuncs#readme"
Issues = "https://github.com/unknown/nbfuncs/issues"
Source = "https://github.com/unknown/nbfuncs"

[tool.hatch.version]
path = "nbfuncs/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "nbformat>=5.7",
]

[tool.hatch.envs.dev]
extra-dependencies = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ipykernel",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=nbfuncs --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "nbfuncs/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
select = ["ALL"]
ignore = ["EM", "D203", "D212"]
fix = true
force-exclude = true
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
